--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@ body {
     align-items: center;
     justify-content: center;
     gap: 50px;
-    background: linear-gradient(454deg, #755ec0, #6e1eef);
+    background: linear-gradient(454deg, #755ec0, #8a017e);
     scroll-snap-align: start;
 }
 .slide2 h2{
@@ -69,7 +69,7 @@ body {
     align-items: center;
     justify-content: center;
     gap: 50px;
-    background: linear-gradient(454deg, #8a79c3, #32a1e7);
+    background: linear-gradient(454deg, #cf5052, #840bc0);
     scroll-snap-align: start;
 }
 
