--- a/index.css
+++ b/index.css
@@ -164,3 +164,22 @@ body {
     font-weight: 600px;
     max-width: 650px;
 }
+@media (min-width: 600px) {
+    .slide1 h1 {
+        font-size: 6vw;
+    }
+
+    .slide1 p, .slide2 p, .slide3 ul, .slide4 ul, .slide5 ul, .slide6 ul {
+        font-size: 3vw;
+    }
+}
+
+@media (min-width: 900px) {
+    .slide1 h1 {
+        font-size: 4vw;
+    }
+
+    .slide1 p, .slide2 p, .slide3 ul, .slide4 ul, .slide5 ul, .slide6 ul {
+        font-size: 2vw;
+    }
+}
